Fixed center alignment issue with card.

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -274,7 +274,7 @@ form{
 .card{
   background-color: #fff;
   border-radius: 2px;
-  width: 100%;
+  width: auto;
   padding: 16px;
   margin: 16px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
